npx prettier --write . (reformat everything)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,13 +9,7 @@
       "disableOptimisticBPs": true,
       "cwd": "${workspaceFolder}",
       "runtimeExecutable": "npm",
-      "args": [
-        "run",
-        "test",
-        "--",
-        "--runInBand",
-        "--watchAll=false"
-      ]
+      "args": ["run", "test", "--", "--runInBand", "--watchAll=false"]
     }
   ]
 }
